--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
   <link href="assets/css/style.css" rel="stylesheet">
   <!-- You can change the theme colors from here -->
   <link id="tema" href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="google-signin-client_id" content="1039189348887-1i4hkgm4lkbrd6dsiikvk37m2efrska3.apps.googleusercontent.com">
+
 </head>
 <body class="fix-header card-no-border fix-sidebar">
 
